<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KotlinIntroduceDataActivity">

    <EditText
        android:text="@string/textDefault"
        android:id="@+id/editTextField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/introduce_text"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:text="@string/tamanoWN"
        android:id="@+id/siezeLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="50dp"/>

    <SeekBar
        android:id="@+id/seekBarKotlinId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/siezeLabelText"
        app:layout_constraintStart_toStartOf="parent"
        android:max="50"
        android:progress="32"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/applyChangesKotlin"
        android:text="@string/Apply_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/seekBarKotlinId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="80dp"/>

    <Button
        android:id="@+id/exitButtonKotlin"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sizeResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="80dp"/>

    <TextView
        android:text="@string/text"
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appValuesText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/AppValues"
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textLabel"
        app:layout_constraintStart_toEndOf="@id/textLabel"
        android:layout_marginStart="5dp"/>

    <TextView
        android:text="@string/Size"
        android:id="@+id/sizeLabelResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/AppValues"
        android:id="@+id/sizeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sizeLabelResultText"
        app:layout_constraintStart_toEndOf="@id/sizeLabelResultText"
        android:layout_marginStart="5dp"/>

    <TextView
        android:text="@string/AppValues"
        android:id="@+id/appValuesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/applyChangesKotlin"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_margin="50dp"/>


    <Button
        android:id="@+id/swapLanguageButtonKotlin"
        android:text="Java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/exitButtonKotlin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>